--- a/Diego/diego.css
+++ b/Diego/diego.css
@@ -8,6 +8,7 @@
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10%;
     background: white;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     border-radius: 8px;
